--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"mongodb": "1.3.5",
 		"morgan": "^1.9.1",
 		"socket.io": "0.9.x",
-		"JSV": "4.0.x"
+		"JSV": "4.0.x",
+		"redis": "0.8.x"
 	}
 }
